skeplib/tests/fixtures/resolver/invalid/cycle_two/b.sk
import a;

fn fb() -> Int {
  return 1;
}
